--- a/TestAPP/app/src/main/res/values/strings.xml
+++ b/TestAPP/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">TestAPP</string>
+    <string name="app_name">MyFit</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
@@ -7,7 +7,7 @@
     <string name="title_activity_sensors_api">SensorsAPI</string>
     <string name="intro_text">Hi! Let\'s listen to some available data sources! Check the menu for more actions!</string>
     <string name="action_unregister_listener">Unregister listener</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Set Sensors</string>
     <string name="permission_rationale">Location data is used as part of the Google Fit API</string>
     <string name="permission_denied_explanation">Permission was denied, but is needed for core
         functionality.</string>
@@ -32,5 +32,11 @@
         <item>Activity</item>
         <item>Step</item>
         <item>Distance</item>
+        <item>Location</item>
+        <item>Speed</item>
+        <item>Weight</item>
+        <item>Nutrition</item>
+        <item>Heart Rate BPM</item>
+        <item>Calories</item>
     </string-array>
 </resources>
