upload to firebase

--- a/TestAPP/app/src/main/res/values/strings.xml
+++ b/TestAPP/app/src/main/res/values/strings.xml
@@ -33,10 +33,21 @@
         <item>Step</item>
         <item>Distance</item>
         <item>Location</item>
-        <item>Speed</item>
-        <item>Weight</item>
-        <item>Nutrition</item>
-        <item>Heart Rate BPM</item>
-        <item>Calories</item>
+        <!--<item>Speed</item>-->
+        <!--<item>Weight</item>-->
+        <!--<item>Nutrition</item>-->
+        <!--<item>Heart Rate BPM</item>-->
+        <!--<item>Calories</item>-->
+    </string-array>
+
+    <string-array name="activity">
+        <item>still</item>
+        <item>walking</item>
+        <item>running</item>
+        <item>biking</item>
+        <item>in vehicle</item>
+        <item>on foot</item>
+        <item>tilting</item>
+        <item>unknown</item>
     </string-array>
 </resources>
