--- a/TestAPP/app/src/main/res/values/strings.xml
+++ b/TestAPP/app/src/main/res/values/strings.xml
@@ -53,11 +53,11 @@
     </string-array>
 
     <string-array name="activity">
-        <item>still</item>
-        <item>walking</item>
-        <item>running</item>
-        <item>biking</item>
-        <item>in vehicle</item>
-        <item>tilting</item>
+        <item>Still</item>
+        <item>Walking</item>
+        <item>Running</item>
+        <item>Biking</item>
+        <item>In Vehicle</item>
+        <item>Tilting</item>
     </string-array>
 </resources>
